--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,12 @@
-version: "3.9"
+# version: "3.9"
 
 services:
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile.frontend
+    container_name: frontend
+    restart: always
     ports:
       - "80:80"
     depends_on:
@@ -16,10 +18,17 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile.backend
+      target: builder
+    container_name: backend
+    restart: always
     env_file:
       - ./backend/.env
     ports:
-      - "8081:8081"
+      - "3000:3000"
+    volumes:
+      - ./backend/src:/usr/src/app/src # hot reload source code
+      - /usr/src/app/node_modules # prevent overwriting node_modules
+    command: npm run dev
     networks:
       - mern
 
