--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -3,9 +3,13 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    location / {
+        try_files $uri /index.html;
+    }
+
     location /api/ {
         rewrite ^/api/(.*)$ /$1 break;
-        proxy_pass http://backend:8081/;
+        proxy_pass http://backend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -13,7 +17,5 @@ server {
         proxy_cache_bypass $http_upgrade;
     }
 
-    location / {
-        try_files $uri /index.html;
-    }
+    
 }
