local mongodb setup and changes of related docker

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,5 @@
 PORT=3000
 MONGO_URI=mongodb+srv://sandysam:%24sandy%24am1234@cluster0.0b0hdp2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI_DEV=mongodb://mongo:27017/job_application_tracker
 JWT_SECRET=job-application-jwt-secret
 COOKIE_VARIABLE=job_application_cookie
